# crypto-analytics-platform

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: auth.py  main.py
backend/app/api/: routes.py
backend/app/db/: models.py
backend/app/services/: collector.py  market_data.py  queue_manager.py
backend/scripts/: backfill.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AssetSelect.tsx  Background.tsx  ConfirmDialog.tsx  MainChart.tsx  MainLayout.tsx  MetricCard.tsx  Navbar.tsx  ProtectedRoute.tsx  PublicOnlyRoute.tsx
frontend/src/config/: firebase.ts
frontend/src/context/: ToastContext.tsx
frontend/src/hooks/: useAnalytics.ts
frontend/src/mocks/: analytics.ts
frontend/src/pages/: Dashboard.tsx  Landing.tsx  Login.tsx  NotFound.tsx  UserProfile.tsx
frontend/src/utils/: format.ts
